--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>);"></div>
+      <div class="profile__image-container">
+        <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>);"></div>
+        <div class="profile__image-edit" style="background-image: url(<%=require('./images/image-edit.svg')%>);"></div>
+      </div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -77,6 +80,26 @@
     </div>
   </div>
 </div>
+<div class="popup popup_type_confirm">
+  <div class="popup__content">
+    <button type="button" class="popup__close"></button>
+    <h3 class="popup__title">Вы уверены?</h3>
+    <form class="popup__form" name="new-place" novalidate>
+      <button type="submit" class="button popup__button">Да</button>
+    </form>
+  </div>
+</div>
+<div class="popup popup_type_change-avatar">
+  <div class="popup__content">
+    <button type="button" class="popup__close"></button>
+    <h3 class="popup__title">Обновить аватар</h3>
+    <form class="popup__form" name="new-avatar" novalidate>
+      <input type="url" name="link" id="url-input" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <span class="form__input-error url-input-error"></span>
+      <button type="submit" class="button popup__button">Сохранить</button>
+    </form>
+  </div>
+</div>
 
 <template id="card-template">
   <li class="places__item card">
@@ -85,7 +108,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__like">
+        <button type="button" class="card__like-button"></button>
+        <p class="card__like-counter"></p>
+      </div>
     </div>
   </li>
 </template>
