--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
   <div class="popup__content">
     <button type="button" class="popup__close"></button>
     <h3 class="popup__title">Вы уверены?</h3>
-    <form class="popup__form" name="new-place" novalidate>
+    <form class="popup__form" name="confirm" novalidate>
       <button type="submit" class="button popup__button">Да</button>
     </form>
   </div>
